2011-04-13  Tomasz Krasuski <kr0tki@poczta.onet.pl>
* src/atari.c: Fix bug introduced at 04-09 with atari.c not compiling when
  HAVE_SIGNAL is not defined.
* DOS/INSTALL, src/configure.ac, src/aclocal.m4: Detect presence of SDL
  using the standard m4 script provided by SDL. New configure options are
  available: --disable-sdltest, --with-sdl-prefix and --with-sdl-exec-prefix.

2011-04-09  Tomasz Krasuski <kr0tki@poczta.onet.pl>
* DOC/USAGE, src/atari800.man, src/ui.c, src/atari_ntsc/atari_ntsc.[ch],
  src/sdl/palette.[ch], src/sdl/video.[ch], src/sdl/video_gl.[ch],
  src/sdl/video_sw.[ch]: Add option for setting pixel (texture) format
  in OpenGL mode - depending on graphics hardware, different formats give
  the best performance. the BPP parameter is now only for software modes.
  Also fix a bug with bit depth autodetection not working (in Windows BPP
  autotetection works only before the first call to SDL_SetVideoMode), and use
  the SDL 8-bit palettised video mode properly.
* DOC/USAGE, src/atari800.man, src/ui.c, src/sdl/video.[ch],
  src/sdl/video_gl.[ch], src/sdl/video_sw.c: Add option for enabling
  synchronization with vertical retrace - for SDL fullscreen non-OpenGL modes.
* DOC/USAGE, src/atari800.man, src/ui.c, src/sdl/video_gl.[ch]:
  Add option for disabling OpenGL Pixel Buffer Objects - on some hardware they
  decrease performance.
* DOC/USAGE, src/atari800.man, src/ui.c, src/videomode.[ch]:
  Add option for automatic detection of host screen aspect ratio.
* DOC/USAGE, src/atari800.man, src/ui.c, src/videomode.[ch], src/sdl/video.c:
  Rename several options to more intuitive names - in command line and in GUI:
  -horiz-offset -> -horiz-shift, -vert-offset -> -vert-shift,
  -stretch integer -> -stretch integral,
  -keep-aspect 1to1 -> image-aspect square-pixels,
  -[no]-opengl -> -[no]-video-accel
* src/ui.c: Reorder the Video Mode Settings menu, for better usability.
  Use the slider control for video area/shift options.